[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/YellowCounter.gd" type="Script" id=1]
[ext_resource path="res://scripts/HeightmapTest.gd" type="Script" id=2]
[ext_resource path="res://scripts/BlueCounter.gd" type="Script" id=3]
[ext_resource path="res://scripts/BubbleManager.gd" type="Script" id=4]
[ext_resource path="res://scripts/GreenCounter.gd" type="Script" id=5]
[ext_resource path="res://assets/BlueCanister.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/YellowMarker.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/GreenCanister.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/AudioManager.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/GreenMarker.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/YellowCanister.tscn" type="PackedScene" id=11]
[ext_resource path="res://sounds/jingle.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/lowpoly_level.tscn" type="PackedScene" id=13]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
tonemap_mode = 3

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
params_blend_mode = 1
params_cull_mode = 2
albedo_color = Color( 0.396078, 0.960784, 0.866667, 0.180392 )

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )

[node name="MainLevel" type="Spatial"]
script = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.975362, 0.220612, 0, -0.220612, -0.975362, 0, 0, 0 )
light_color = Color( 1, 0.968627, 0.611765, 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Player1Pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 266.38, 15.0227, 219.814 )

[node name="Player2Pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 259.611, 10.7782, 236.435 )

[node name="Control3" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YellowCounter" type="Label" parent="Control3"]
margin_left = 921.0
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 94.0
text = "Test"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupSound" type="AudioStreamPlayer" parent="Control3/YellowCounter"]
stream = ExtResource( 12 )

[node name="Control" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenCounter" type="Label" parent="Control"]
margin_left = 919.408
margin_top = 3.5636
margin_right = 1020.41
margin_bottom = 76.5636
text = "Test"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupSound" type="AudioStreamPlayer" parent="Control/GreenCounter"]
stream = ExtResource( 12 )

[node name="Control2" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueCounter" type="Label" parent="Control2"]
margin_left = 920.0
margin_top = 25.0
margin_right = 1014.0
margin_bottom = 44.0
text = "Test"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupSound" type="AudioStreamPlayer" parent="Control2/BlueCounter"]
stream = ExtResource( 12 )

[node name="YellowCanister" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 295.894, -21.9427, 183.494 )

[node name="YellowMarker" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 289.985, -14.161, 225.451 )

[node name="AudioManager" parent="." instance=ExtResource( 9 )]

[node name="BubbleManager" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 274.846, -7.82092, 211.606 )
script = ExtResource( 4 )

[node name="BubbleMesh" type="MeshInstance" parent="BubbleManager"]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 12.2681, 0, 1.16817 )
mesh = SubResource( 4 )
material/0 = null

[node name="GreenCanisters" type="Spatial" parent="."]

[node name="GreenCanister" parent="GreenCanisters" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 255.143, -24.2082, 236.375 )

[node name="GreenCanister2" parent="GreenCanisters" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 265.206, -24.8492, 179.812 )

[node name="GreenCanister3" parent="GreenCanisters" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 253.091, -24.154, 204.643 )

[node name="GreenCanister4" parent="GreenCanisters" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 276.52, -23.2316, 238.432 )

[node name="GreenCanister5" parent="GreenCanisters" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 313.417, -24.9879, 212.031 )

[node name="BlueCanisters" type="Spatial" parent="."]

[node name="BlueCanister" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 263.607, -23.3491, 198.096 )

[node name="BlueCanister15" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 271.418, -14.9476, 225.268 )

[node name="BlueCanister14" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 301.727, -17.0382, 200.994 )

[node name="BlueCanister13" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 257.839, -23.4255, 208.813 )

[node name="BlueCanister12" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 286.782, -20.0767, 238.318 )

[node name="BlueCanister11" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 264.849, -23.3789, 192.199 )

[node name="BlueCanister10" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 295.063, -17.6158, 190.823 )

[node name="BlueCanister9" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 272.335, -21.6261, 189.9 )

[node name="BlueCanister8" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 279.247, -14.8405, 229.467 )

[node name="BlueCanister7" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 299.447, -21.8095, 235.173 )

[node name="BlueCanister6" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 258.51, -20.7167, 219.993 )

[node name="BlueCanister5" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 278.679, -22.3124, 183.958 )

[node name="BlueCanister4" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 306.329, -22.3878, 226.381 )

[node name="BlueCanister2" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 285.263, -22.3228, 182.265 )

[node name="BlueCanister3" parent="BlueCanisters" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 304.568, -20.6465, 217.091 )

[node name="GreenMarkers" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 48.1209, 0 )

[node name="GreenMarker" parent="GreenMarkers" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 265.321, -66.7021, 220.544 )
markerSound = "Bass"

[node name="GreenMarker2" parent="GreenMarkers" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 278.917, -60.7332, 224.334 )
markerSound = "Melody"

[node name="GreenMarker3" parent="GreenMarkers" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 269.191, -66.8123, 204.444 )
markerSound = "Harmony"

[node name="GreenMarker4" parent="GreenMarkers" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 280.329, -62.4059, 198.423 )
markerSound = "Percussion"

[node name="GreenMarker5" parent="GreenMarkers" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 291.15, -60.4822, 211.146 )
markerSound = "Other"

[node name="lowpoly_test" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 275.921, -26.1022, 214 )
[connection signal="numYellowCanistersCollected" from="Control3/YellowCounter" to="YellowMarker" method="_on_YellowCounter_numYellowCanistersCollected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarkers/GreenMarker5" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarkers/GreenMarker" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarkers/GreenMarker3" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarkers/GreenMarker2" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarkers/GreenMarker4" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarkers/GreenMarker5" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarkers/GreenMarker" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarkers/GreenMarker3" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarkers/GreenMarker2" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarkers/GreenMarker4" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="yellowCanisterCollected" from="YellowCanister" to="Control3/YellowCounter" method="_on_YellowCanister_yellowCanisterCollected"]
[connection signal="yellowCanisterPlaced" from="YellowMarker" to="Control3/YellowCounter" method="_on_YellowMarker_yellowCanisterPlaced"]
[connection signal="greenCanisterCollected" from="GreenCanisters/GreenCanister" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="greenCanisterCollected" from="GreenCanisters/GreenCanister2" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="greenCanisterCollected" from="GreenCanisters/GreenCanister3" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="greenCanisterCollected" from="GreenCanisters/GreenCanister4" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="greenCanisterCollected" from="GreenCanisters/GreenCanister5" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister15" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister14" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister13" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister12" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister11" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister10" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister9" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister8" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister7" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister6" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister5" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister4" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister2" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanisters/BlueCanister3" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker2" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker2" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker2" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker2" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker2" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker2" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker3" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker3" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker3" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker3" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker3" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker3" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker4" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker4" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker4" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker4" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker4" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker4" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker5" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker5" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarkers/GreenMarker5" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker5" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker5" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarkers/GreenMarker5" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
